--- a/packages/rocketchat-theme/server/colors.less
+++ b/packages/rocketchat-theme/server/colors.less
@@ -391,7 +391,7 @@ a:hover {
 
 .full-page,
 .page-loading {
-	.gradient(shade(@primary-background-color), @primary-background-color);
+	background-color: #00b0be;
 
 	a {
 		color: @tertiary-font-color;
